--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Server=DESKTOP-HFJQ4KB\\SQLEXPRESS;Database=WineHouse;TrustServerCertificate=True;Trusted_Connection=true;"
+    "MyConnection": ""
   }
 }
